--- a/frontend/src/assets/css/header.css
+++ b/frontend/src/assets/css/header.css
@@ -29,7 +29,7 @@
 .search-bar {
     display: flex;
     margin-top: 10px;
-    border: 2px solid #00C853;
+    border: 2px solid #3AF26E;
     border-radius: 25px;
     padding: 5px 15px;
     width: 400px;
@@ -52,7 +52,7 @@
     border: none;
     cursor: pointer;
     font-size: 18px;
-    color: #00C853;
+    color: #3AF26E;
 }
 
 .nav {
@@ -71,7 +71,7 @@
 }
 
 .nav a:hover {
-    color: #00C853;
+    color: #3AF26E;
 }
 
 .user-menu {
