--- a/frontend/src/assets/css/join.css
+++ b/frontend/src/assets/css/join.css
@@ -31,15 +31,28 @@
 }
 
 /* 프로필 업로드 버튼 */
-.join-container .profile-upload {
+.join-container .profile{
     display: flex;
     justify-content: center;
     margin: 20px 0;
 }
 
+.join-container .profile-upload {
+
+    width: 150px;
+    height: 150px;
+}
+
+.join-container .profile-upload img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 50%;
+}
+
 .join-container .profile-upload-circle {
-    width: 120px;
-    height: 120px;
+    width: 150px;
+    height: 150px;
     border: 2px solid #3AF26E;
     border-radius: 50%;
     display: flex;
